# graphrag-agent

./: .gitignore  Makefile  README.md  detailed_profile_20250604_111529.csv  log.err  markdown_parser.txt  memory_profile_20250604_111124.csv  memory_profile_20250604_111216.csv  profile_results.prof  pyproject.toml  queue_dump.txt  requirements.txt  results copy.jsonl  run.sh  setup.py
examples/: README.md  crawler_example.py  demo.ipynb  test_crawler.py
flows/: generate_flow_20250515_132213.py  generate_flow_20250515_155513.py  generate_flow_20250516_075725.py  generate_flow_20250516_080755.py  generate_flow_20250516_081131.py  generate_flow_20250516_082028.py  generate_flow_20250516_082901.py  generate_flow_20250516_083606.py  generate_flow_20250516_084043.py  generate_flow_20250516_094944.py
index/: index.faiss  index.pkl
output/: code_samples.jsonl  langflow_components.jsonl  langflow_docs.jsonl
src/graphrag_agent/: browser_automation.py  console.py  fiass-test.py  flow_chat_v1.py  flow_chat_v2.py  flow_chatv0.py  flow_gen.py  ingest_api.py  ingest_code.py  ingest_docs.py  ingest_langflow.py  launch.json  main-old.py  main.py  prompt.py  t.html  test.ipynb
src/graphrag_agent/tools/: async_processor.py  browser_automation.py  code_validation.py  content_parser-asyncprocessor.py  content_parser.py  crawler.py  document_embedding.py  dump_context.py  file_writer.py  ner_extraction.py  old-code_validator.py  old.py  parse_content.py  qa_generator.py  queue_processor.py  tools.py  vector_store.py  yield.py
src/graphrag_agent/utils/: fiass-monitor-detailed.py  fiass-monitor.py  logging_config.py  utils.py  web_crawler.py
src/tests/integration/:  test_integration_crawler_and_parser.py  test_integration_crawler_and_parser.py
src/tests/tools/: test_content_parsers.not  test_crawler.py
src/tests/unit/: old-test_content_parsers copy.py  test_content_parsers.py  test_crawler.py  test_embedding.py  test_vector_store.py
test_reports/: junit.xml  test_results.html
