[project]
name = "graphrag-agent-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "google-adk>=0.2.0",
    "ipykernel>=6.29.5",
    "nltk>=3.8.1",
    "ollama>=0.4.8",
    "openai>=1.76.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scrapy>=2.12.0",
    "torch>=2.7.0",
    "urllib3>=2.0.0"
]
