[project]
name = "graphrag-agent-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astrapy>=2.0.1",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "colorlog>=6.9.0",
    "flake8>=7.2.0",
    "google-adk>=0.2.0",
    "ipykernel>=6.29.5",
    "markdown-it-py[linkify,plugins]>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "nltk>=3.8.1",
    "ollama>=0.4.8",
    "openai>=1.76.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scrapy>=2.12.0",
    "selenium>=4.32.0",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "urllib3>=2.0.0",
    "webdriver-manager>=4.0.2",
    "pytest-async>=0.1.1",
    "pytest-asyncio>=0.26.0",
    "bs4>=0.0.2",
    "pytest-httpserver>=1.1.3",
    "langchain-core>=0.3.63",
    "pytest-html>=4.1.1",
    "pytest-sugar>=1.0.0",
]


[tool.pytest.ini_options]
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
addopts = "--tb=short -v --strict-markers"
